# avidemux2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  License.txt  License.txt.in  README  README.md  avidemux2.appdata.xml  avidemux2.desktop  bootStrap.bash  bootStrapCrossMac106.sh  bootStrapCrossMingw.sh  bootStrapCrossMingwQt5_mxe.sh  bootStrapCrossMingwQt6_2026.sh  bootStrapCrossMingwQt6_mxe.sh  bootStrapCrossMingwQt6_mxe_ninja.sh  bootStrapCrossMingwQt6_mxe_qt6.sh  bootStrapCrossMingw_w32.sh  bootStrapCrossMingw_w32Qt5.sh  bootStrapCrossMingw_w32Qt5_clang.sh  bootStrapCrossMingw_w64.sh  bootStrapCrossMingw_w64Qt5.sh  bootStrapHaikuOS.bash  bootStrapMacOS_Monterey.arm64.sh  bootStrapMacOS_Sonoma.sh  bootStrapMacOS_Sonoma_lite.sh  bootStrapOsx.bash  bootStrapOsx_Catalina.bash  bootStrapOsx_EC.bash  bootStrapOsx_HighSierra.bash  bootStrapOsx_SL.bash  bootStrapOsx_Sierra.bash  bootStrapOsx_qt5.bash  checkCaseSensitivity.sh  (+25 more)
addons/dumpIndex/: ADM_ts.h  ADM_tsReadIndex.cpp  CMakeLists.txt  main.cpp
addons/fontGen/: .CMakeLists.txt.swp  ADM_coreConfig.h  ADM_vidFont.h  ADM_vidSRTload.cpp  CMakeLists.txt  fontgen.cpp
addons/mkvscan/: ADM_default.h  CMakeLists.txt  Makefile  Makefile.make  config.h  mkv_c.cpp
avidemux/: ADM_gettext.cpp  ADM_imageLoader.cpp  ADM_lavcodec.h  ADM_preview.cpp  ADM_preview.h  CMakeLists.txt  admAppSettings.cmake  avi_vars.h  avidemuxPackageDebian.cmake  button_mapping  commonCmakeApplication.cmake  gtk_gui.cpp  gtkgui.h  gui_action.hxx  gui_action.names  gui_autodrive.cpp  gui_blackframes.cpp  gui_navigate.cpp  gui_play.cpp  gui_save.cpp  gui_savenew.cpp  guiplay.cpp  libcheck.sh  main.cpp  prefs.h  prefs.in  prefs_gen.pl  prototype.h  subdirs
avidemux/ADM_UIs/: CMakeLists.txt
avidemux/ADM_audio/: CMakeLists.txt  audio_mpegidentify.cpp  audio_packetizer.cpp  audioex.h  audiogen.cpp  audiosource_ext.cpp  audiosource_ext.h  audiotimeline.cpp  aviaudio.hxx
avidemux/ADM_audioFilter_old/: CMakeLists.txt  audiodeng_buildfilters.cpp  audioeng_buildfilters.h  audioprocess.hxx
avidemux/ADM_audiocodec/: ADM_8bits.cpp  ADM_ad_plugin.h  ADM_audiocodec.cpp  ADM_audiocodec.h  ADM_audiocodeclist.h  ADM_codecimaadpcm.cpp  ADM_codecmsadpcm.cpp  ADM_codeculaw.cpp  ADM_codecwav.cpp  ADM_codecwma.cpp  ADM_pluginLoad.cpp  CMakeLists.txt
avidemux/ADM_audiofilter/: CMakeLists.txt  audioEncoderApi.h  audio_encoderPlugin.cpp  audio_encoderWrapper.cpp  audio_encoderWrapper.h  audio_raw.cpp  audio_raw.h  audiodeng_buildfilters.cpp  audioeng_buff.cpp  audioeng_buildfilters.h  audiofilter_SRC.cpp  audiofilter_bridge.cpp  audiofilter_bridge.h  audiofilter_buildchain.cpp  audiofilter_dolby.cpp  audiofilter_dolby.h  audiofilter_film2pal.cpp  audiofilter_film2pal.h  audiofilter_limiter.cpp  audiofilter_mixer.cpp  audiofilter_mixer.h  audiofilter_normalize.cpp  audiofilter_normalize_param.h  audioprocess.hxx
avidemux/ADM_codecs/: ADM_codec.h  ADM_codecNull.h  ADM_codecs.cpp  ADM_ffmp43.cpp  ADM_ffmp43.h  ADM_ffmpeg.cpp  ADM_ffmpegConfig.h  ADM_ffmpeg_vdpau.cpp  ADM_mjpeg.h  ADM_png.cpp  ADM_png.h  ADM_rgb16.cpp  ADM_rgb16.h  ADM_theora_enc.h  ADM_uyvy.cpp  ADM_xvid4param.h  CMakeLists.txt
avidemux/ADM_editor/: ADM_edCache.cpp  ADM_edCache.h  ADM_edFrameType.cpp  ADM_edIdentify.cpp  ADM_edLoadSave.cpp  ADM_edMarker.cpp  ADM_edPtsDts.cpp  ADM_edPtsDts.h  ADM_edRender.cpp  ADM_edSearch.cpp  ADM_edStub.cpp  ADM_edit.cpp  ADM_edit.cpp.orig  ADM_edit.hxx  ADM_outputfmt.h  ADMedAVIAUD.cpp  CMakeLists.txt
avidemux/ADM_encoder/: ADM_encCodecDesc.h  ADM_externalEncoder.cpp  ADM_externalEncoder.h  ADM_pluginLoad.cpp  ADM_pluginLoad.h  ADM_vidEncode.hxx  CMakeLists.txt  adm_encConfig.cpp  adm_encConfig.h  adm_encCopy.cpp  adm_encCopy.h  adm_encRequant.cpp  adm_encRequant.h  adm_encXvid4.cpp  adm_encXvid4.h  adm_encdivx.cpp  adm_encdivx.h  adm_encffmatrix.h  adm_encffmpeg.cpp  adm_encffmpeg.h  adm_encffmpeg1.cpp  adm_encmjpeg.cpp  adm_encmjpeg.h  adm_encmjpeg_param.h  adm_encmpeg2enc.cpp  adm_encmpeg2enc.h  adm_encoder.cpp  adm_encoder.h  adm_encxvid.cpp  adm_encxvid.h  adm_encyv12.cpp  adm_encyv12.h  xvid_vbr.c  xvid_vbr.h
avidemux/ADM_filter/: ADM_vidDummyFilter.cpp  CMakeLists.txt  buildummy.sh  buildummy_win32.sh  buildummy_yadif.sh  buildummy_yadif_win32.sh  filter.cpp  filter_autoFilter.cpp  filter_declaration.cpp  filter_saveload.cpp  vidVCD.cpp
avidemux/ADM_inputs/: CMakeLists.txt
avidemux/ADM_libraries/: CMakeLists.txt
avidemux/ADM_mpegIndexer/: CMakeLists.txt  dmx_indexer_internal.h
avidemux/ADM_ocr/: ADM_leftturn.h  ADM_ocr.cpp  CMakeLists.txt  adm_glyph.cpp  adm_glyph.h  adm_leftturn.cpp
avidemux/ADM_osSupport/: ADM_crashHook.cpp  ADM_debug.cpp  ADM_misc.cpp  ADM_queue.cpp  CMakeLists.txt
avidemux/ADM_plugin/: ADM_vidEnc_plugin.h
avidemux/ADM_requant/: CMakeLists.txt  putvlc.h  tcrequant.c  tcrequant.h
avidemux/ADM_script/: ADM_Avidemux.cpp  ADM_Avidemux.h  ADM_AvidemuxAudio.h  ADM_AvidemuxVideo.cpp  ADM_AvidemuxVideo.h  ADM_JSAvidemux.cpp  ADM_JSAvidemux.h  ADM_JSAvidemuxAudio.cpp  ADM_JSAvidemuxAudio.h  ADM_JSAvidemuxVideo.cpp  ADM_JSDirectorySearch.cpp  ADM_JSDirectorySearch.h  ADM_JSFunctions.cpp  ADM_JSFunctions.cpp.orig  CMakeLists.txt  DirectorySearch.cpp  DirectorySearch.cpp.orig  DirectorySearch.h  StdFile.h  adm_scanner.h
avidemux/ADM_toolkit/: ADM_audioQueue.cpp  ADM_packetQueue.cpp  ADM_packetQueue.h  CMakeLists.txt  automation.cpp
avidemux/ADM_userInterfaces/: CMakeLists.txt
avidemux/ADM_video/: ADM_vidMisc.h  ADM_vidNull.cpp  ADM_vidPartial.h  ADM_vidPartial_param.h  ADM_vidRaw.cpp  CMakeLists.txt
avidemux/ADM_videoFilter/: ADM_vidComputeAverage.cpp  ADM_vidEraser.cpp  ADM_vidEraser.h  ADM_vidNumber.cpp  ADM_vidParticle.cpp  ADM_vidParticle.h  ADM_vidSwissArmyKnife.cpp  ADM_vidSwissArmyKnife.h  ADM_vidThreshold.cpp  ADM_vidVobSub.h  (+4 more)
avidemux_core/: CMakeLists.txt  corePackageDebian.cmake  corePackageRpm.cmake  corePackageTarGz.cmake
avidemux_plugins/: CMakeLists.txt  pluginsPackageDebian.cmake  pluginsPackageRpm.cmake  pluginsPackageTarGz.cmake  update_conf
(+6410 files in other folders)
